[package]
name = "resume-cli"
authors = ["Alper Akça <alperakca79@outlook.com>"]
categories = ["resume", "portfolio", "cli"]
description = "CLI portfolio made with Rust"
homepage = "https://github.com/lnxwizard/resume-cli"
repository = "https://github.com/lnxwizard/resume-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
inquire = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
